@@ -1,7 +1,7 @@
 Package: tram
 Title: Transformation Models
-Version: 0.5-0
-Date: 2020-08-27
+Version: 0.5-1
+Date: 2020-09-03
 Authors@R: c(person("Torsten", "Hothorn", role = c("aut", "cre"),
                     email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471")),
              person("Luisa", "Barbanti", role = "aut"),
